plugin page update

--- a/download.html
+++ b/download.html
@@ -88,18 +88,23 @@
         <div class="container">
             <h1 class="text-center">Download</h1>
             <br/><br/>
-            <h3>Binary Executable</h3>
+            <h4>Binary Cli</h4>
             <p class="lead">
                 You can download Microconfig for your OS from
                 <a href="https://github.com/microconfig/microconfig/releases">Github</a>.<br/>
             </p>
             <br/><br/>
-            <h3>Brew</h3>
+            <h4>Brew</h4>
             <p class="lead">
                 MacOS install with HomeBrew coming soon...<br/>
             </p>
             <br/><br/>
-            <h3>Jar</h3>
+            <h4>Jar Cli</h4>
+            <p class="lead">
+                You can download Microconfig jar from <a href="https://github.com/microconfig/microconfig/releases">Github</a>.
+            </p>
+            <br/><br/>
+            <h4>Core Jar</h4>
             <p class="lead">
                 If you want to add Microconfig-core as a dependency to your Java project use
                 <a href="https://search.maven.org/artifact/io.microconfig/microconfig-core/4.0.0/jar">this Maven
@@ -107,7 +112,7 @@
             </p>
             <br/><br/>
 
-            <h3>How to use</h3>
+            <h4>How to use</h4>
             <p class="lead">
                 Check out <a href="quickstart.html">quickstart</a> to learn how to use Microconfig.
             </p>
