plugin page update

--- a/plugin.html
+++ b/plugin.html
@@ -196,7 +196,7 @@
 
 <footer class="text-muted">
     <div class="container footer-container">
-        <p class="copyright">Microconfig.io © 2017-2020</p>
+        <p class="copyright">Microconfig.io &copy; 2017-2020</p>
 
         <div class="contacts">
             <ul class="list-unstyled mb-0">
