--- a/quickstart.html
+++ b/quickstart.html
@@ -48,47 +48,23 @@
           name="keywords">
     <meta content="Microconfig is a modern and simple way to manage microservice configuration. Especially in the Cloud."
           name="description">
-    <title>Microconfig.io - Quickstart</title>
-
-    <link href="bootstrap/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link href="bootstrap/bootstrap.min.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
     <link href="bloggersans/bloggersans.css" rel="stylesheet">
     <link rel="icon" href="css/favicon.ico">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="bootstrap/bootstrap.bundle.min.js"></script>
+    <script>
+        $(function () {
+            $("#header").load("header.html");
+            $("#footer").load("footer.html");
+        });
+    </script>
+
+    <title>Microconfig.io - Microservice Configuration Made Easy</title>
 </head>
-
 <body>
-
-<header>
-    <div class="navbar shadow-sm">
-        <div class="container d-flex justify-content-between">
-            <a href="https://microconfig.io" class="navbar-brand d-flex align-items-center">
-                <img src="./images/microconfig_logo_horizontal.svg" alt="Microconfig"/>
-            </a>
-
-            <nav class="my-2 my-md-0 mr-md-3">
-                <a class="p-2 text-dark" href="features.html">Features</a>
-                <a class="p-2 text-dark" href="quickstart.html">Quickstart</a>
-                <a class="p-2 text-dark" href="download.html">Download</a>
-                <a class="p-2 text-dark" href="plugin.html">IDE plugin</a>
-                <a class="p-2 text-dark" href="documentation.html">Docs</a>
-            </nav>
-        </div>
-    </div>
-</header>
-
-<a href="https://github.com/microconfig/microconfig" class="github-corner" aria-label="View source on GitHub">
-    <svg width="80" height="80" viewBox="0 0 250 250"
-         style="fill:#5fbb92; color:#fff; position: fixed; top: 0; border: 0; right: 0;z-index: 100"
-         aria-hidden="true">
-        <path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path>
-        <path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2"
-              fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path>
-        <path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z"
-              fill="currentColor" class="octo-body"></path>
-    </svg>
-</a>
-
+<div id="header"></div>
 <main role="main" id="download">
     <section class="jumbotron">
         <div class="container">
@@ -212,7 +188,8 @@ Generated [dev] configs in 326ms
                 <li><code>-e dev</code> generate for <code>dev</code> environment</li>
             </ul>
 
-            <p>As a result Microconfig created <code>build</code> folder with configs for all services defined in <code>dev</code> environment.</p>
+            <p>As a result Microconfig created <code>build</code> folder with configs for all services defined in <code>dev</code>
+                environment.</p>
 
             <pre class="bg-light"><code>build
 &#x251c;&#x2500;&#x2500; payment-backend
@@ -228,32 +205,11 @@ Generated [dev] configs in 326ms
             <br/><br/>
             <h2 id="conclusion">Conclusion</h2>
 
-            <p>We hope you agree that microconfig is easy to use. Now you can explore current example to see Microconfig syntax or you can try out <a href="https://microconfig.io/plugin.html">IDE plugin</a> .</p>
+            <p>We hope you agree that microconfig is easy to use. Now you can explore current example to see Microconfig
+                syntax or you can try out <a href="https://microconfig.io/plugin.html">IDE plugin</a> .</p>
         </div>
     </section>
 </main>
-
-<footer class="text-muted">
-    <div class="container footer-container">
-        <p class="copyright">Microconfig.io &copy; 2017-2020</p>
-
-        <div class="contacts">
-            <ul class="list-unstyled mb-0">
-                <li class="lead">Join our <a
-                        href="https://join.slack.com/t/microconfig/shared_invite/zt-dflf2m0n-wOPVfAmk5eiHPn_9Omff7Q">Slack!</a>
-                </li>
-                <li class="lead">Contribute on <a href="https://github.com/microconfig/microconfig">Github</a></li>
-                <li class="lead"><a href="mailto:hello@microconfig.io">hello@microconfig.io</a></li>
-            </ul>
-        </div>
-    </div>
-</footer>
-
-<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-        crossorigin="anonymous"></script>
-<script src="bootstrap/bootstrap.bundle.min.js"
-        integrity="sha384-6khuMg9gaYr5AxOqhkVIODVIvm9ynTT5J4V1cfthmT+emCG6yVmEZsRHdxlotUnm"></script>
-
+<div id="footer"></div>
 </body>
 </html>
