--- a/plugin.html
+++ b/plugin.html
@@ -102,7 +102,7 @@
                     Once activated from the menu or by a hotkey it will try to find <code>component</code> in
                     'components' directory and open matching file inside.
                 </p>
-                <video controls loop width="1000" src="video/jump-include.mov"></video>
+                <video controls loop style="width: 1000px; max-width: 100%" src="video/jump-include.mov"></video>
                 <br/>
                 <br/>
 
@@ -113,7 +113,7 @@
                     it, once found it will place cursor on that line.
                 </p>
                 <br/>
-                <video controls loop width="1000" src="video/jump-placeholder.mov"></video>
+                <video controls loop style="width: 1000px; max-width: 100%" src="video/jump-placeholder.mov"></video>
                 <br/>
                 <br/>
                 <h4>Resolve placeholder</h4>
@@ -142,7 +142,7 @@
                     Shift-Command-F10).
                     Preview window allows you to see resulting configs for different environments.
                 </p>
-                <video controls loop width="1000" src="video/preview.mov"></video>
+                <video controls loop style="width: 1000px; max-width: 100%" src="video/preview.mov"></video>
                 <br/>
                 <br/>
                 <h4>Config build</h4>
