made images responsive

--- a/plugin.html
+++ b/plugin.html
@@ -121,20 +121,17 @@
                 <p>If activated with cursor inside placeholder <code>${}</code> it will try to resolve only selected
                     placeholder.</p>
                 <p>
-                    <img class="w-75"
-                         src="https://github.com/microconfig/microconfig-idea-plugin/raw/master/doc/resolve-placeholder.png"
-                         alt="resolve-placeholder" style="max-width:100%;"></p>
+                    <img src="https://github.com/microconfig/microconfig-idea-plugin/raw/master/doc/resolve-placeholder.png"
+                         alt="resolve-placeholder" style="width: 800px; max-width:100%;"></p>
 
                 <p>If activated with cursor on a property key it will try to resolve the whole property.</p>
-                <p><img class="w-75"
-                        src="https://github.com/microconfig/microconfig-idea-plugin/raw/master/doc/resolve-property.png"
-                        alt="resolve-property" style="max-width:100%;"></p>
+                <p><img src="https://github.com/microconfig/microconfig-idea-plugin/raw/master/doc/resolve-property.png"
+                        alt="resolve-property" style="width: 800px; max-width:100%;"></p>
 
                 <p>It also works with expression language.</p>
                 <p>
-                    <img class="w-75"
-                         src="https://github.com/microconfig/microconfig-idea-plugin/raw/master/doc/resolve-expression.png"
-                         alt="resolve-expression" style="max-width:100%;"></p>
+                    <img src="https://github.com/microconfig/microconfig-idea-plugin/raw/master/doc/resolve-expression.png"
+                         alt="resolve-expression" style="width: 800px; max-width:100%;"></p>
                 <br/>
                 <h4>Configuration preview</h4>
                 <p>You can preview configuration for a component on the fly. To open preview either activate <code>
@@ -148,9 +145,8 @@
                 <h4>Config build</h4>
                 <p>You can create standard IDEA Run configuration for Microconfig to build configs with your IDE.</p>
                 <p>
-                    <img class="w-75"
-                         src="https://github.com/microconfig/microconfig-idea-plugin/raw/master/doc/run.png" alt="run"
-                         style="max-width:100%;">
+                    <img src="https://github.com/microconfig/microconfig-idea-plugin/raw/master/doc/run.png" alt="run"
+                         style="width: 800px; max-width:100%;">
                 </p>
                 <br/>
                 <h4>Installation</h4>
@@ -160,10 +156,9 @@
                 </p>
 
                 <p>
-                    <img class="w-75"
-                         src="https://github.com/microconfig/microconfig-idea-plugin/raw/master/doc/install.png"
+                    <img src="https://github.com/microconfig/microconfig-idea-plugin/raw/master/doc/install.png"
                          alt="install"
-                         style="max-width:100%;">
+                         style="width: 800px; max-width:100%;">
                 </p>
                 <br/>
                 <p>Or download plugin zip file from
