features page update to static content

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <div class="card mb-4">
                         <div class="card-header">
                             <h4 class="my-0 mc-color">
-                                <a href="features.html#/?id=simple-configuration-layout">Simple
+                                <a href="features.html#layout">Simple
                                     Configuration Layout</a>
                             </h4>
                         </div>
@@ -104,8 +104,7 @@
                     <div class="card mb-4">
                         <div class="card-header">
                             <h4 class="my-0 mc-color">
-                                <a href="features.html#/?id=reuse-common-parts">Reuse Common
-                                    Parts</a>
+                                <a href="features.html#include">Reuse Common Parts</a>
                             </h4>
                         </div>
                         <div class="card-body">
@@ -118,7 +117,7 @@
                     <div class="card mb-4">
                         <div class="card-header">
                             <h4 class="my-0 mc-color">
-                                <a href="features.html#/?id=reference-values">Reference Values</a>
+                                <a href="features.html#placeholders">Reference Values</a>
                             </h4>
                         </div>
                         <div class="card-body">
@@ -130,13 +129,12 @@
                     <div class="card mb-4">
                         <div class="card-header">
                             <h4 class="my-0 mc-color">
-                                <a href="features.html#/?id=dynamic-values">Dynamic Values</a>
+                                <a href="features.html#expressions">Dynamic Values</a>
                             </h4>
                         </div>
                         <div class="card-body">
                             You can use #{ 'expression' + 'language' } to generate your values. It supports math
-                            operations
-                            and much more.
+                            operations and much more.
                         </div>
                     </div>
                 </div>
@@ -144,8 +142,7 @@
                     <div class="card mb-4">
                         <div class="card-header">
                             <h4 class="my-0 mc-color">
-                                <a href="features.html#/?id=environment-specific-config">Environment Specific
-                                    Config</a>
+                                <a href="features.html#env">Environment Specific Config</a>
                             </h4>
                         </div>
                         <div class="card-body">
@@ -158,7 +155,7 @@
                     <div class="card mb-4">
                         <div class="card-header">
                             <h4 class="my-0 mc-color">
-                                <a href="features.html#/?id=static-files-templating">Static Files Templating</a>
+                                <a href="features.html#templates">Static Files Templating</a>
                             </h4>
                         </div>
                         <div class="card-body">
@@ -170,7 +167,7 @@
                     <div class="card mb-4">
                         <div class="card-header">
                             <h4 class="my-0 mc-color">
-                                <a href="features.html#/?id=config-diff">Config Diff</a>
+                                <a href="features.html#diff">Config Diff</a>
                             </h4>
                         </div>
                         <div class="card-body">
@@ -187,8 +184,7 @@
                         </div>
                         <div class="card-body">
                             You can use JetBrains IDE Microconfig plugin to navigate, preview and generate config
-                            without
-                            leaving your IDE.
+                            without leaving your IDE.
                         </div>
                     </div>
                 </div>
