added google search console

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     <link rel="icon" href="css/favicon.ico">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="bootstrap/bootstrap.bundle.min.js"></script>
+    <meta name="google-site-verification" content="-vwHylVI8TRHCCK0lhgP67LeEMjlRRIXHuRKeCB_Vnc" />
     <title>Microconfig.io - Microservice Configuration Made Easy</title>
 </head>
 <body>
