--- a/download.html
+++ b/download.html
@@ -98,14 +98,14 @@
             <br/>
             <h4>Jar Cli</h4>
             <p class="lead">
-                You can download Microconfig executable jar from <a href="https://github.com/microconfig/microconfig/releases">Github</a>.
+                You can download Microconfig executable jar from <a href="https://github.com/microconfig/microconfig/releases">Github</a> or
+                <a href="https://search.maven.org/artifact/io.microconfig/microconfig-cli/">Maven Central (microconfig-cli:all)</a>.
             </p>
             <br/>
             <h4>Core Jar</h4>
             <p class="lead">
                 If you want to add Microconfig-core as a dependency to your Java project use
-                <a href="https://search.maven.org/artifact/io.microconfig/microconfig-core/4.0.0/jar">this Maven
-                    artifact</a>.
+                <a href="https://search.maven.org/artifact/io.microconfig/microconfig-core/">microconfig-core artifact</a>.
             </p>
             <br/>
 
