plugin page update

--- a/plugin.html
+++ b/plugin.html
@@ -116,7 +116,7 @@
                     Once activated from the menu or by a hotkey it will try to find <code>component</code> in
                     'components' directory and open matching file inside.
                 </p>
-                <video controls loop style="width: 1000px; max-width: 100%" src="video/jump-include.mov"></video>
+                <video controls loop style="width: 1000px; max-width: 100%" src="video/jump-include.mp4"></video>
                 <br/>
                 <br/>
 
@@ -127,7 +127,7 @@
                     it, once found it will place cursor on that line.
                 </p>
                 <br/>
-                <video controls loop style="width: 1000px; max-width: 100%" src="video/jump-placeholder.mov"></video>
+                <video controls loop style="width: 1000px; max-width: 100%" src="video/jump-placeholder.mp4"></video>
                 <br/>
                 <br/>
                 <h4>Resolve placeholder</h4>
@@ -135,16 +135,16 @@
                 <p>If activated with cursor inside placeholder <code>${}</code> it will try to resolve only selected
                     placeholder.</p>
                 <p>
-                    <img src="https://github.com/microconfig/microconfig-idea-plugin/raw/master/doc/resolve-placeholder.png"
+                    <img src="images/plugin/resolve-placeholder.png"
                          alt="resolve-placeholder" style="width: 800px; max-width:100%;"></p>
 
                 <p>If activated with cursor on a property key it will try to resolve the whole property.</p>
-                <p><img src="https://github.com/microconfig/microconfig-idea-plugin/raw/master/doc/resolve-property.png"
+                <p><img src="images/plugin/resolve-property.png"
                         alt="resolve-property" style="width: 800px; max-width:100%;"></p>
 
                 <p>It also works with expression language.</p>
                 <p>
-                    <img src="https://github.com/microconfig/microconfig-idea-plugin/raw/master/doc/resolve-expression.png"
+                    <img src="images/plugin/resolve-expression.png"
                          alt="resolve-expression" style="width: 800px; max-width:100%;"></p>
                 <br/>
                 <h4>Configuration preview</h4>
@@ -153,13 +153,13 @@
                     Shift-Command-F10).
                     Preview window allows you to see resulting configs for different environments.
                 </p>
-                <video controls loop style="width: 1000px; max-width: 100%" src="video/preview.mov"></video>
+                <video controls loop style="width: 1000px; max-width: 100%" src="video/preview.mp4"></video>
                 <br/>
                 <br/>
                 <h4>Config build</h4>
                 <p>You can create standard IDEA Run configuration for Microconfig to build configs with your IDE.</p>
                 <p>
-                    <img src="https://github.com/microconfig/microconfig-idea-plugin/raw/master/doc/run.png" alt="run"
+                    <img src="images/plugin/run.png" alt="run"
                          style="width: 800px; max-width:100%;">
                 </p>
                 <br/>
@@ -170,7 +170,7 @@
                 </p>
 
                 <p>
-                    <img src="https://github.com/microconfig/microconfig-idea-plugin/raw/master/doc/install.png"
+                    <img src="images/plugin/install.png"
                          alt="install"
                          style="width: 800px; max-width:100%;">
                 </p>
